--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <div class="modal-box">
                 <h3 class="modal-title">Add Book</h3>
                 <form id="addBookForm">
-                    <input type="text" name="book_name" placeholder="Enter book name..." id="book_name" required>
+                    <input type="text" name="book_name" placeholder="Enter book name..." id="book_name" required autofocus>
                     <input type="text" name="book_author" placeholder="Enter author name..." id="book_author" required>
                     <input type="number" name="book_pages" min="1" max="1000" placeholder="Enter total pages..." id="book_pages" required>
                     <fieldset>
                         <legend>Already read the book?</legend>
                         <div class="book-status-fields">
-                          <input type="radio" id="read-yes" name="read-status" value="yes" checked>
+                          <input type="radio" id="read-yes" name="read_status" value="yes" checked>
                           <label for="read-yes">Yes</label>
-                          <input type="radio" id="read-no" name="read-status" value="no">
+                          <input type="radio" id="read-no" name="read_status" value="no">
                           <label for="read-no">No</label>
                         </div>
                     </fieldset>
