--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </div>
         </nav>
     </div>
+    
     <section class="books-card-container" id="bookCardContainer">
         
     </section>
@@ -26,6 +27,7 @@
             <div class="modal-box">
                 <h3 class="modal-title">Add Book</h3>
                 <form id="addBookForm">
+                    <input type="hidden" name="book_id" id="book_id">
                     <input type="text" name="book_name" placeholder="Enter book name..." id="book_name" required autofocus>
                     <input type="text" name="book_author" placeholder="Enter author name..." id="book_author" required>
                     <input type="number" name="book_pages" min="1" max="1000" placeholder="Enter total pages..." id="book_pages" required>
@@ -43,6 +45,14 @@
                 <button id="close-modal">Don't want to add.</button>
             </div>
         </div>
+        <div class="tool-bar">
+            <ul>
+                <li><a href="#!">Total Books : 30</a></li>
+                <li><a href="#!">Read Books: 12</a></li>
+                <li><a href="#!">Unread Books: 18</a></li>
+            </ul>
+        </div>
+
         <button class="add-book-btn" id="modal-btn">
             <img src="./assets/icons/book-plus-outline.svg" alt="addBookBtn" class="add-btn-icon">
         </button>
